# pytest-mock-setup

./: .gitignore  pyproject.toml  readme.md
src/pytest_extended_mock/: plugin.py
tests/: __init__.py  conftest.py  test_stuff.py
