[project]
name = "pytest-mock-setup"
version = "0.1.0"
description = ""
authors = [{ name = "Adam Davenport", email = "adam006@gmail.com" }]
readme = "README.md"
requires-python = ">=3.12"
dependencies = ["pytest (>=8.3.5,<9.0.0)", "pytest-mock (>=3.14.0,<4.0.0)"]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
