[project]
name = "pytest-extended-mock"
version = "0.1.0"
description = ""
authors = [{ name = "Adam Davenport", email = "adam006@gmail.com" }]
readme = "README.md"
requires-python = ">=3.12"
dependencies = ["pytest (>=8.3.5,<9.0.0)", "pytest-mock (>=3.14.0,<4.0.0)", "faker (>=37.0.0,<38.0.0)"]
classifiers = [
  "Framework :: Pytest",
  "Programming Language :: Python",
  "Topic :: Software Development :: Testing",
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.plugins.pytest11]
extended_mock = "pytest_extended_mock.plugin"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
